@@ -520,7 +520,7 @@ circumstances, to be targeted by this skill. Enter ? or help on
 ZAPPERMASKS for more information on the syntax for CoffeeMud "Zapper"
 masks.</td>
 </tr>
-<tr>
+<tr><td><span style="font-style: italic;">Target Fail Message</span></td><td>very optional message to show players when the Target Mask above is failed.</td></tr><tr>
 <td><em>Fizzle
 Message</em></td>
 <td>the message shown
